[package]
name = "sw-logger-rs"
version = "1.0.1"
edition = "2021"
authors = ["subwoofy"]
description = "Simple logger for Rust"
license = "CC0-1.0"
homepage = "https://github.com/Subwoof01/sw-logger-rs"
repository = "https://github.com/Subwoof01/sw-logger-rs"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
all_asserts = "2.3.1"
chrono = "0.4.34"
lazy_static = "1.4.0"
